[package]
name = "challenge-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scalar = { path = 'scalar' }
temperature_conv = { path = 'temperature_conv' }
speed_transformation = { path = 'speed_transformation' }
looping = { path = 'looping' }
groceries = { path = 'groceries' }
reverse_string = { path = 'reverse_string' }
find_factorial = { path = 'find_factorial' }
fibonacci2 = { path = 'fibonacci2' }
matrix_transposition = { path = 'matrix_transposition' }
division_and_remainder = { path = 'division_and_remainder' }
tuples_refs = { path = 'tuples_refs' }
borrow = { path = 'borrow' }
doubtful = { path = 'doubtful' }
string_literals = { path = 'string_literals' }
name_initials = { path = 'name_initials' }